--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,10 @@
 [submodule "growt"]
 	path = growt
 	url = https://github.com/TooBiased/growt.git
+[submodule "folly"]
+	path = folly
+	url = https://github.com/facebook/folly.git
+[submodule "fast_float"]
+	path = fast_float
+	url = https://github.com/fastfloat/fast_float.git
+
