--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,3 @@
-[submodule "growt"]
-	path = growt
+[submodule "external/growt"]
+	path = external/growt
 	url = https://github.com/TooBiased/growt.git
-[submodule "folly"]
-	path = folly
-	url = https://github.com/facebook/folly.git
-[submodule "fast_float"]
-	path = fast_float
-	url = https://github.com/fastfloat/fast_float.git
-
